# Egg-Variable

./: .gitignore  CMakeLists.txt  README.md  egg-variable.cmake.in  egg-variable.pc.in
documentation/: ToDo
include/: CMakeLists.txt
include/egg/: variable.hpp
source/: CMakeLists.txt  variable.cpp
test/: CMakeLists.txt  t01.cpp
